--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
           application_name: docker-frontend
           environment_name: docker-frontend-env
-          existing_bucket_name: ck-devops-bucket
+          existing_bucket_name: elasticbeanstalk-ap-southeast-1-339012949450
           region: ap-southeast-1
           version_label: ${{ github.sha }}
           deployment_package: deploy.zip
